Updated links to related articles to include description and metadata

--- a/sprint/5/labour-market/average-weekly-earnings/index.html
+++ b/sprint/5/labour-market/average-weekly-earnings/index.html
@@ -213,12 +213,12 @@ title: "Average weekly earnings"
           <ul class="list--neutral padding-left--0">
             <li class="margin-bottom--4">
               <p class="margin-bottom--1"><a class="heading-small" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsearn01">EARN01: Average Weekly Earnings</a></p>
-              <p class="font-xsmall margin-bottom--1">Released: 14 August 2018</p>
+              <p class="font-xsmall margin-bottom--1">Dataset | Released 14 August 2018</p>
               <p>Average Weekly Earnings (AWE), seasonally adjusted. This spreadsheet includes the headline estimates of earnings growth based on the Monthly Wages and Salaries Survey.</p>
             </li>
             <li class="margin-bottom--4">
               <p class="margin-bottom--1"><a class="heading-small" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsbysectorearn02">EARN02: Average Weekly Earnings by sector</a></p>
-              <p class="font-xsmall margin-bottom--1">Released: 14 August 2018</p>
+              <p class="font-xsmall margin-bottom--1">Dataset | Released 14 August 2018</p>
               <p>Average weekly earnings by sector (Monthly Wages and Salaries Survey).</p>
             </li>
           </ul>
@@ -313,10 +313,12 @@ title: "Average weekly earnings"
             <ul class="list--neutral margin-top--4">
               <li>
                 <p><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/articles/supplementaryanalysisofaverageweeklyearnings/latest">Analysis of real earnings and contributions to nominal earnings growth, Great Britain</a></p>
+                <p class="font-xsmall margin-bottom--1">Article | Released 14 August 2018</p>
                 <p>Analyses of the Average Weekly Earnings (AWE) figures, adjusted for inflation, and of wages and employment contributions underlying single-month movements in the nominal AWE.</p>
               </li>
               <li>
                 <p><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/bulletins/annualsurveyofhoursandearnings/latest">Annual Survey of Hours and Earnings (ASHE)</a></p>
+                <p class="font-xsmall margin-bottom--1">Article | Released 14 August 2018</p>
                 <p>Data on levels, distribution and make-up of earnings and hours worked for UK employees by sex and full-time or part-time status in all industries and occupations.</p>
               </li>
             </ul>
@@ -327,7 +329,11 @@ title: "Average weekly earnings"
           <div class="content-box">
             <ul class="list--neutral margin-top--4">
               <li class=""><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/bulletins/averageweeklyearningsbonuspaymentsingreatbritain/2017">Average Weekly Earnings, bonus payments in Great Britain: 2017</a></li>
+              <p class="font-xsmall margin-bottom--1">Bulletin | Released 14 August 2018</p>
+              <p>Annual data covering average weekly earnings and bonus payments.</p>
               <li class=""><a class="font-weight--bold" href="https://www.gov.uk/government/statistics/uk-real-time-information-experimental-statistics">Experimental earnings statistics based on Pay As You Earn (PAYE) administrative data</a></li>
+              <p class="font-xsmall margin-bottom--1">Article | Released 14 August 2018</p>
+              <p>Experimental statistics, calculating earnings using administrative data.</p>
             </ul>
           </div>
 
