--- a/sprint/5/labour-market/overview/index.html
+++ b/sprint/5/labour-market/overview/index.html
@@ -305,12 +305,12 @@ title: "Labour market overview"
           <ul class="list--neutral padding-left--0">
             <li class="margin-bottom--4">
               <p class="margin-bottom--1"><a class="heading-small" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/datasets/summaryoflabourmarketstatistics">A01: Summary of labour market statistics</a></p>
-              <p class="font-xsmall margin-bottom--1">Released: 14 August 2018</p>
+              <p class="font-xsmall margin-bottom--1">Dataset | Released 14 August 2018</p>
               <p>Labour market statistics summary data tables.</p>
             </li>
             <li class="margin-bottom--4">
               <p class="margin-bottom--1"><a class="heading-small" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/datasets/nsaemploymentunemploymentandeconomicinactivityforpeopleaged16andoverandagedfrom16to64a02">A02 NSA: Employment, unemployment and economic inactivity for people aged 16 and over and aged from 16 to 64 (not seasonally adjusted)</a></p>
-              <p class="font-xsmall margin-bottom--1">Released: 14 August 2018</p>
+              <p class="font-xsmall margin-bottom--1">Dataset | Released 14 August 2018</p>
               <p>Labour Force Survey summary. Shows the headline employment, unemployment and inactivity series (not seasonally adjusted).</p>
             </li>
           </ul>
@@ -410,18 +410,22 @@ title: "Labour market overview"
             <ul class="list--neutral margin-top--4">
               <li>
                 <p><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/articles/sicknessabsencefallstothelowestratein24years/2018-07-30">Sickness absence in the labour market</a></p>
+                <p class="font-xsmall margin-bottom--1">Article | Released 14 August 2018</p>
                 <p>The latest figures for 2017 show that the average number of sickness absence days that UK workers take has almost halved since 1993.</p>
               </li>
               <li>
                 <p><a class="font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/populationandmigration/internationalmigration/articles/migrationandthelabourmarketuk/2016">International immigration and the labour market</a></p>
+                <p class="font-xsmall margin-bottom--1">Bulletin | Released 14 August 2018</p>
                 <p>The labour market characteristics of UK, EU and non-EU nationals in the UK labour market in 2016.</p>
               </li>
               <li>
                 <p><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/articles/graduatesintheuklabourmarket/2017">Graduates in the labour market</a></p>
+                <p class="font-xsmall margin-bottom--1">Article | Released 14 August 2018</p>
                 <p>Employment, skill level of jobs, industry, pay, unemployment and comparison of male and female graduates.</p>
               </li>
               <li>
                 <p><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/articles/trendsinselfemploymentintheuk/2018-02-07">Trends in self-employment in the UK</a></p>
+                <p class="font-xsmall margin-bottom--1">Article | Released 14 August 2018</p>
                 <p>Analysing the characteristics, income and wealth of the self-employed.</p>
               </li>
             </ul>
