--- a/sprint/5/labour-market/average-weekly-earnings/index.html
+++ b/sprint/5/labour-market/average-weekly-earnings/index.html
@@ -329,7 +329,7 @@ title: "Average weekly earnings"
           <div class="content-box">
             <ul class="list--neutral margin-top--4">
               <li class=""><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/bulletins/averageweeklyearningsbonuspaymentsingreatbritain/2017">Average Weekly Earnings, bonus payments in Great Britain: 2017</a></li>
-              <p class="font-xsmall margin-bottom--1">Bulletin | Released 14 August 2018</p>
+              <p class="font-xsmall margin-bottom--1">Article | Released 19 September 2017</p>
               <p>Annual data covering average weekly earnings and bonus payments.</p>
               <li class=""><a class="font-weight--bold" href="https://www.gov.uk/government/statistics/uk-real-time-information-experimental-statistics">Experimental earnings statistics based on Pay As You Earn (PAYE) administrative data</a></li>
               <p class="font-xsmall margin-bottom--1">Article | Released 14 August 2018</p>
