Testing padding changes in related links

--- a/sprint/5/labour-market/average-weekly-earnings/index.html
+++ b/sprint/5/labour-market/average-weekly-earnings/index.html
@@ -327,7 +327,7 @@ title: "Average weekly earnings"
 
           <h2 id="more-links" class="margin-top--7">You may also be interested in</h2>
           <div class="content-box">
-            <ul class="list--neutral margin-top--4">
+            <ul class="list--neutral">
               <li class=""><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/bulletins/averageweeklyearningsbonuspaymentsingreatbritain/2017">Average Weekly Earnings, bonus payments in Great Britain: 2017</a></li>
               <p class="font-xsmall margin-bottom--1">Article | Released 19 September 2017</p>
               <p>Annual data covering average weekly earnings and bonus payments.</p>
