--- a/prototypes.html
+++ b/prototypes.html
@@ -26,6 +26,12 @@ footer: false
         <li><a href="sprint/5/labour-market/employment">Employment</a></li>
       </ul>
 
+      <h3>Earnings bulletin mockups</h3>
+      <ul>
+        <li><a href="sprint/5/main-points-user-testing/long-bulletin-no-main-points">Annual Survey of Hours and Earnings: 2017 provisional and 2016 revised results (long bulletin, no main points)</a></li>
+        <li><a href="sprint/5/main-points-user-testing/short-bulletin-with-main-points">Employee earnings in the UK: 2018 (short bulletin, with main points)</a></li>
+      </ul>
+
       <h2 class="margin-bottom--0">Sprint 4</h2>
       <p>27 September 2018 to 10 October 2018</p>
 
