Fixing table of contents

--- a/sprint/5/main-points-user-testing/short-bulletin-with-main-points/index.html
+++ b/sprint/5/main-points-user-testing/short-bulletin-with-main-points/index.html
@@ -138,37 +138,25 @@ summary: "Important measures of employee earnings, using data from the Annual Su
               <a href="#section__content-number" class="js-scroll">Main points</a>
             </li>
             <li class="table-of-contents__item">
-              <a href="#low-and-high-pay" class="js-scroll">Low and high pay</a>
+              <a href="#analysis-of-employee-earnings" class="js-scroll">Analysis of employee earnings</a>
             </li>
             <li class="table-of-contents__item">
-              <a href="#gender-pay-differences" class="js-scroll">Gender pay differences</a>
+              <a href="#earnings-data" class="js-scroll">Earnings data</a>
             </li>
             <li class="table-of-contents__item">
-              <a href="#public-and-private-sector-pay" class="js-scroll">Public and private sector pay</a>
+              <a href="#glossary" class="js-scroll">Glossary</a>
             </li>
             <li class="table-of-contents__item">
-              <a href="#regional-earnings" class="js-scroll">Regional earnings</a>
+              <a href="#measuring-this-data" class="js-scroll">Measuring this data</a>
             </li>
             <li class="table-of-contents__item">
-              <a href="#earnings-by-age-group" class="js-scroll">Earnings by age group</a>
+              <a href="#strengths-and-limitations" class="js-scroll">Strengths and limitations</a>
             </li>
             <li class="table-of-contents__item">
-              <a href="#earnings-by-occupation" class="js-scroll">Earnings by occupation</a>
+              <a href="#more-about-earnings" class="js-scroll">More about earnings</a>
             </li>
             <li class="table-of-contents__item">
-              <a href="#earnings-by-business-size-band" class="js-scroll">Earnings by business size band</a>
-            </li>
-            <li class="table-of-contents__item">
-              <a href="#the-make-up-of-earnings" class="js-scroll">The make-up of earnings</a>
-            </li>
-            <li class="table-of-contents__item">
-              <a href="#hours-paid" class="js-scroll">Hours paid</a>
-            </li>
-            <li class="table-of-contents__item">
-              <a href="#links-to-related-statistics" class="js-scroll">Links to related statistics</a>
-            </li>
-            <li class="table-of-contents__item">
-              <a href="#quality-and-methodology" class="js-scroll">Quality and methodology</a>
+              <a href="#you-may-also-be-interested-in" class="js-scroll">You may also be interested in</a>
             </li>
           </ol>
 
@@ -262,7 +250,7 @@ summary: "Important measures of employee earnings, using data from the Annual Su
         data-gtm-vis-first-on-screen-6431828_3337="77113177" data-gtm-vis-total-visible-time-6431828_3337="5000" data-gtm-vis-has-fired-6431828_3218="1" data-gtm-vis-has-fired-6431828_3337="1">
         <section>
           <header>
-            <h2><span class="section__content-number">2.</span> Analysis of employee earnings</h2>
+            <h2><span class="section__content-number">3.</span>Analysis of employee earnings</h2>
           </header>
           <h4>Median full-time weekly earnings increased 3.5% compared with 2017, to £569</h4>
           <p>
