Update the prototypes page with link to latest pages

--- a/prototypes.html
+++ b/prototypes.html
@@ -13,7 +13,18 @@ footer: false
     <div class="col col--md-one col--lg-one">
       <h1>Prototypes</h1>
 
-      <h2 class="margin-bottom--0">Sprint 5 - latest</h2>
+      <h2 class="margin-bottom--0">Sprint ? - latest</h2>
+      <p>December 2018</p>
+
+      <h3>Latest analysis, not the latest data</h3>
+      <ul>
+        <li><a href="sprint/5/latest-analysis-not-latest-data/overview-page/gender-pay-gap-2017">To the overview page of the latest bulletin</a></li>
+      </ul>
+      <ul>
+        <li><a href="sprint/5/latest-analysis-not-latest-data/previous-release-page/gender-pay-gap-2017">To the previous release page</a></li>
+      </ul>
+
+      <h2 class="margin-bottom--0">Sprint 5</h2>
       <p>11 October 2018 to 24 October 2018</p>
 
       <h3>Patterns</h3>
