--- a/prototypes.html
+++ b/prototypes.html
@@ -32,6 +32,11 @@ footer: false
         <li><a href="sprint/5/main-points-user-testing/short-bulletin-with-main-points">Employee earnings in the UK: 2018 (short bulletin, with main points)</a></li>
       </ul>
 
+      <h3>Labour market prototype</h3>
+      <ul>
+        <li><a href="sprint/5/labour-market/overview">Labour market prototype (updated to reflect latest page titles)</a></li>
+      </ul>
+
       <h2 class="margin-bottom--0">Sprint 4</h2>
       <p>27 September 2018 to 10 October 2018</p>
 
