Updated the spacing

--- a/sprint/10/typography/index.html
+++ b/sprint/10/typography/index.html
@@ -241,7 +241,7 @@ summary: "Important measures of employee earnings, using data from the Annual Su
             <h2>3. Analysis of employee earnings</h2>
 
             <!-- Chart -->
-            <h4>Median full-time weekly earnings increased 3.5% compared with 2017, to £569</h4>
+            <h4 style="padding-top: 0;">Median full-time weekly earnings increased 3.5% compared with 2017, to £569</h4>
             <h5 class="chart-subtitle">Figure 1: Median full-time gross weekly earnings, UK, April 2006 to 2018</h5>
 
             <div id="chart-88a1323f" data-filename="88a1323f" data-uri="/employmentandlabourmarket/peopleinwork/earningsandworkinghours/bulletins/annualsurveyofhoursandearnings/2018/88a1323f" class="markdown-chart" data-highcharts-chart="1" style="width: 230px;">
@@ -399,7 +399,7 @@ summary: "Important measures of employee earnings, using data from the Annual Su
           <!-- Section 5 - glossary - definition list, <h3> and <p> or <h4> and <p>-->
           <div class="content-margin">
             <h2>Glossary</h2>
-            <h3>Full-time and part-time</h3>
+            <h3 style="padding-top: 0;">Full-time and part-time</h3>
             <p>Full-time is defined as employees working more than 30 paid hours per week (or 25 or more for the teaching professions).</p>
 
             <h3>Continuously employed</h3>
