Updated typography styles and protoype pages looking at chart title options

--- a/sprint/10/typography/index.html
+++ b/sprint/10/typography/index.html
@@ -351,23 +351,27 @@ summary: "Important measures of employee earnings, using data from the Annual Su
             </div>
 
             <!-- TODO: Source and notes - needs looking at <p> text under an h6 looks weird-->
-            <h5>Source: Annual Survey of Hours and Earnings (ASHE) - Office for National Statistics</h5>
-            <h6>Notes:</h6>
-            <ol>
+            <p class="font-xsmall">Source: Annual Survey of Hours and Earnings (ASHE) - Office for National Statistics</p>
+            <p style="margin-bottom: 8px;" class="font-xsmall">Notes:</p>
+            <ol style="margin-bottom: 24px;">
               <li class="font-xsmall">Footnotes applicable to all charts in this bulletin can be found in <a class href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/bulletins/annualsurveyofhoursandearnings/2018#measuring-this-data">Section
                   5: Measuring these data</a>.</li>
+              <li class="font-xsmall">Notes notes notes</li>
+              <li class="font-xsmall">Notes notes notes</li>
             </ol>
 
             <!-- TODO: Download chart - needs looking at, no margin under h5, needs space after the buttons -->
-            <div style="margin-bottom: 16px;">
-            <h5>Download this chart</h5>
-            <a class="btn btn--primary print--hide js-chart-image-src " data-filename="88a1323f" href="/chartimage?uri=/employmentandlabourmarket/peopleinwork/earningsandworkinghours/bulletins/annualsurveyofhoursandearnings/2018/88a1323f" download="Figure 1: Median full-time gross weekly earnings, UK, April 2006 to 2018"
+            <div style="margin-bottom: 32px;">
+            <h5 style="margin-bottom: 0; padding-top: 0;">Download this chart</h5>
+            <a style="font-size: 14px;" class="btn btn--primary print--hide js-chart-image-src " data-filename="88a1323f" href="/chartimage?uri=/employmentandlabourmarket/peopleinwork/earningsandworkinghours/bulletins/annualsurveyofhoursandearnings/2018/88a1323f" download="Figure 1: Median full-time gross weekly earnings, UK, April 2006 to 2018"
               data-gtm-title="Figure 1: Median full-time gross weekly earnings, UK, April 2006 to 2018" data-gtm-type="download-chart-image">Image</a>
-            <a class="btn btn--primary print--hide" title="Download as csv" href="/generator?uri=/employmentandlabourmarket/peopleinwork/earningsandworkinghours/bulletins/annualsurveyofhoursandearnings/2018/88a1323f&amp;format=csv" data-gtm-title="Figure 1: Median full-time gross weekly earnings, UK, April 2006 to 2018"
+            <a style="font-size: 14px;" class="btn btn--primary print--hide" title="Download as csv" href="/generator?uri=/employmentandlabourmarket/peopleinwork/earningsandworkinghours/bulletins/annualsurveyofhoursandearnings/2018/88a1323f&amp;format=csv" data-gtm-title="Figure 1: Median full-time gross weekly earnings, UK, April 2006 to 2018"
               data-gtm-type="download-chart-csv">.csv</a>
-            <a class="btn btn--primary print--hide" title="Download as xls" href="/generator?uri=/employmentandlabourmarket/peopleinwork/earningsandworkinghours/bulletins/annualsurveyofhoursandearnings/2018/88a1323f&amp;format=xls" data-gtm-title="Figure 1: Median full-time gross weekly earnings, UK, April 2006 to 2018"
+            <a style="font-size: 14px;" class="btn btn--primary print--hide" title="Download as xls" href="/generator?uri=/employmentandlabourmarket/peopleinwork/earningsandworkinghours/bulletins/annualsurveyofhoursandearnings/2018/88a1323f&amp;format=xls" data-gtm-title="Figure 1: Median full-time gross weekly earnings, UK, April 2006 to 2018"
               data-gtm-type="download-chart-xls">.xls</a>
             </div>
+
+
             <p>In April 2018, median gross weekly earnings for full-time employees were £569, up 3.5% from £550 in 2017 (Figure 1). The 3.5% growth seen this year is the highest growth in earnings since 2008.</p>
 
             <!-- TODO: Warning text -->
