Add link to prototype page and delete duplicate typography css

--- a/prototypes.html
+++ b/prototypes.html
@@ -13,14 +13,19 @@ footer: false
     <div class="col col--md-one col--lg-one">
       <h1>Prototypes</h1>
 
-      <h2 class="margin-bottom--0">Sprint ? - latest</h2>
+      <h2 class="margin-bottom--0">Sprint 10 - latest</h2>
+      <p>January 2018</p>
+
+      <ul>
+        <li><a href="sprint/10/typography">Typography</a></li>
+      </ul>
+
+      <h2 class="margin-bottom--0">Sprint 9</h2>
       <p>December 2018</p>
 
       <h3>Latest analysis, not the latest data</h3>
       <ul>
         <li><a href="sprint/5/latest-analysis-not-latest-data/overview-page/gender-pay-gap-2017">To the overview page of the latest bulletin</a></li>
-      </ul>
-      <ul>
         <li><a href="sprint/5/latest-analysis-not-latest-data/previous-release-page/gender-pay-gap-2017">To the previous release page</a></li>
       </ul>
 
