--- a/sprint/4/page-header/index.html
+++ b/sprint/4/page-header/index.html
@@ -104,13 +104,13 @@ summary: "Crimes against households, adults, children, businesses and society in
         <div class="col-wrap header-meta-wrap margin-bottom-sm--2 margin-bottom-md--1">
           <div class="col col--md-one-third col--lg-one-third header-meta">
             <img class="meta__image" src="{{ "/assets/img/national-statistics.png" | relative_url }}" alt="This is an accredited national statistic.">
-            <p class="font-xxsmall font-color--white"><strong>Contact:</strong><br><a href="#" class="astral-link font-weight--normal font-xxsmall"><span class="visuallyhidden">Email</span> Roger Smith</a></p>
+            <p class="font-xsmall font-color--white"><strong>Contact:</strong><br><a href="#" class="astral-link font-weight--normal font-xsmall"><span class="visuallyhidden">Email</span> Roger Smith</a></p>
           </div>
           <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall font-color--white"><strong>Release date:</strong><br>14 August 2018</p>
+            <p class="font-xsmall font-color--white"><strong>Release date:</strong><br>14 August 2018</p>
           </div>
           <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall font-color--white"><strong>Next release:</strong><br>To be announced</p>
+            <p class="font-xsmall font-color--white"><strong>Next release:</strong><br>To be announced</p>
           </div>
         </div>
       </div>
@@ -182,13 +182,13 @@ summary: "Crimes against households, adults, children, businesses and society in
         <div class="col-wrap header-meta-wrap margin-bottom-sm--2 margin-bottom-md--1">
           <div class="col col--md-one-third col--lg-one-third header-meta">
             <img class="meta__image" src="{{ "/assets/img/national-statistics.png" | relative_url }}" alt="This is an accredited national statistic.">
-            <p class="font-xxsmall font-color--white"><strong>Contact:</strong><br><a href="#" class="astral-link font-weight--normal font-xxsmall"><span class="visuallyhidden">Email</span> Roger Smith</a></p>
+            <p class="font-xsmall font-color--white"><strong>Contact:</strong><br><a href="#" class="astral-link font-weight--normal font-xsmall"><span class="visuallyhidden">Email</span> Roger Smith</a></p>
           </div>
           <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall font-color--white"><strong>Release date:</strong><br>14 August 2018</p>
+            <p class="font-xsmall font-color--white"><strong>Release date:</strong><br>14 August 2018</p>
           </div>
           <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall font-color--white"><strong>Next release:</strong><br>To be announced</p>
+            <p class="font-xsmall font-color--white"><strong>Next release:</strong><br>To be announced</p>
           </div>
         </div>
       </div>
@@ -296,13 +296,13 @@ summary: "Crimes against households, adults, children, businesses and society in
         <div class="col-wrap header-meta-wrap margin-bottom-sm--2 margin-bottom-md--1">
           <div class="col col--md-one-third col--lg-one-third header-meta">
             <img class="meta__image" src="{{ "/assets/img/national-statistics.png" | relative_url }}" alt="This is an accredited national statistic.">
-            <p class="font-xxsmall font-color--white"><strong>Contact:</strong><br><a href="#" class="astral-link font-weight--normal font-xxsmall"><span class="visuallyhidden">Email</span> Roger Smith</a></p>
+            <p class="font-xsmall font-color--white"><strong>Contact:</strong><br><a href="#" class="astral-link font-weight--normal font-xsmall"><span class="visuallyhidden">Email</span> Roger Smith</a></p>
           </div>
           <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall font-color--white"><strong>Release date:</strong><br>14 August 2018</p>
+            <p class="font-xsmall font-color--white"><strong>Release date:</strong><br>14 August 2018</p>
           </div>
           <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall font-color--white"><strong>Next release:</strong><br>To be announced</p>
+            <p class="font-xsmall font-color--white"><strong>Next release:</strong><br>To be announced</p>
           </div>
         </div>
       </div>
