--- a/sprint/5/labour-market/employment/index.html
+++ b/sprint/5/labour-market/employment/index.html
@@ -68,16 +68,16 @@ title: "Employment and unemployment"
       <div class="wrapper">
         <div class="col-wrap header-meta-wrap">
           <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
-            <p class="font-xxsmall"><strong>Time period:</strong><br>April to June 2018</p>
+            <p class="font-xsmall"><strong>Time period:</strong><br>April to June 2018</p>
           </div>
           <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
-            <p class="font-xxsmall"><strong>Release date:</strong><br>14 August 2018</p>
+            <p class="font-xsmall"><strong>Release date:</strong><br>14 August 2018</p>
           </div>
           <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
-            <p class="font-xxsmall"><strong>Release frequency:</strong><br>Monthly</p>
+            <p class="font-xsmall"><strong>Release frequency:</strong><br>Monthly</p>
           </div>
           <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
-            <p class="font-xxsmall" style="border-right:0;"><strong>Next release:</strong><br>11 September 2018</p>
+            <p class="font-xsmall" style="border-right:0;"><strong>Next release:</strong><br>11 September 2018</p>
           </div>
         </div>
       </div>
@@ -239,19 +239,19 @@ title: "Employment and unemployment"
 
             <ul class="list--neutral padding-left--0">
               <li class="margin-bottom--4">
-                <p class="margin-bottom--0"><a class="heading-small" href="#">
+                <p class="margin-bottom--0"><a class="heading-normal" href="#">
                   Employment, unemployment and economic inactivity</a></p>
                 <p class="font-xsmall margin-bottom--1">Time period: January 1971 - June 2018</p>
               </li>
 
               <li class="margin-bottom--4">
-                <p class="margin-bottom--0"><a class="heading-small" href="#">
+                <p class="margin-bottom--0"><a class="heading-normal" href="#">
                   Full time, part time and temporary workers</a></p>
                 <p class="font-xsmall margin-bottom--1">Time period: January 1971 - June 2018</p>
               </li>
 
               <li class="margin-bottom--4">
-                <p class="margin-bottom--0"><a class="heading-small" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/datasets/emp17peopleinemploymentonzerohourscontracts">
+                <p class="margin-bottom--0"><a class="heading-normal" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/datasets/emp17peopleinemploymentonzerohourscontracts">
                   Zero hour contracts</a></p>
                 <p class="font-xsmall margin-bottom--1">Time period: January 2000 - June 2018</p>
               </li>
@@ -260,13 +260,13 @@ title: "Employment and unemployment"
             <h3>Other data avaliable</h2>
               <ul class="list--neutral padding-left--0">
                 <li class="margin-bottom--4">
-                  <p class="margin-bottom--0"><a class="heading-small" href="#">
+                  <p class="margin-bottom--0"><a class="heading-normal" href="#">
                     Employment by country of birth and nationality</a></p>
                   <p class="font-xsmall margin-bottom--1 ">Time period: January 1971 - June 2018</p>
                   <div class="js-show-hide padding-top--0">
                     <div class="show-hide show-hide--light margin-bottom--2 padding-top--0">
                       <div class="js-show-hide__title padding-left--0">
-                        <p class="heading-small">Preview the data</p>
+                        <p class="heading-normal">Preview the data</p>
                       </div>
                       <div class="js-show-hide__content" style="overflow: auto;">
                         <div class="padding-bottom--6">
@@ -1025,20 +1025,20 @@ title: "Employment and unemployment"
                 </li>
 
                 <li class="margin-bottom--4">
-                  <p class="margin-bottom--0 heading-small">
+                  <p class="margin-bottom--0 heading-normal">
                     International employment and unemployment rates</p>
                   <p class="font-xsmall margin-bottom--1">Time period: January 1971 - June 2018</p>
                   <a class="margin-right--2" href="#">View</a><a href="#">Download</a>
                 </li>
 
                 <li class="margin-bottom--4">
-                  <p class="margin-bottom--0"><a class="heading-small" href="#">
+                  <p class="margin-bottom--0"><a class="heading-normal" href="#">
                     Employment figures - 19th century to present</a></p>
                   <p class="font-xsmall margin-bottom--1">Source: Bank of England</p>
                 </li>
 
                 <li class="margin-bottom--4">
-                  <p class="margin-bottom--0"><a class="heading-small" href="http://www.nomisweb.co.uk/home/profiles.asp">
+                  <p class="margin-bottom--0"><a class="heading-normal" href="http://www.nomisweb.co.uk/home/profiles.asp">
                     Employment broken down by UK regions</a></p>
                   <p class="font-xsmall margin-bottom--1">Source: NOMIS</p>
                 </li>
@@ -1053,7 +1053,7 @@ title: "Employment and unemployment"
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
               <div class="js-show-hide__title">
-                <p class="heading-small">Glossary</p>
+                <p class="font-normal" style="font-weight: 700;">Glossary</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
                 <p><strong>Employment</strong><br>
@@ -1068,7 +1068,7 @@ title: "Employment and unemployment"
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
               <div class="js-show-hide__title">
-                <p class="heading-small">Measuring this data</p>
+                <p class="font-normal" style="font-weight: 700;">Measuring this data</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
               <p><strong>Where does the data come from?</strong><br>
@@ -1084,7 +1084,7 @@ title: "Employment and unemployment"
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
               <div class="js-show-hide__title">
-                <p class="heading-small">Strengths and limitations</p>
+                <p class="font-normal" style="font-weight: 700;">Strengths and limitations</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
                 <p>Most of the figures in this statistical bulletin come from surveys of households or businesses and are therefore estimates rather than precise figures. Further information is available in <a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/aguidetolabourmarketstatistics">A guide to labour market statistics</a>.</p>
