New prototype for latest bulletin, not the latest data - takes user to the dataset page

--- a/prototypes.html
+++ b/prototypes.html
@@ -18,6 +18,7 @@ footer: false
 
       <ul>
         <li><a href="sprint/10/typography">Typography</a></li>
+        <li><a href="sprint/10/latest-analysis-not-latest-data/dataset-page/gender-pay-gap-2017">Latest bulletin, not the latest data - dataset page</a></li>
       </ul>
 
       <h2 class="margin-bottom--0">Sprint 9</h2>
