Prototype download PDF as content on the page

--- a/sprint/11/labour-market/employment/index.html
+++ b/sprint/11/labour-market/employment/index.html
@@ -146,6 +146,9 @@ title: "Employment and unemployment"
               <li>
                 <a href="#contact">Contact us</a>
               </li>
+              <li>
+                <a href="#download">Download PDF or print</a>
+              </li>
             </ul>
 
             <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Pages in this collection:</h2>
@@ -1165,6 +1168,26 @@ title: "Employment and unemployment"
           <p class="margin-top--7">
             <a href="#top">Back to top</a>
           </p>
+
+          <!-- contact -->
+          <h2 id="download" class="margin-top--7">Download PDF or print</h2>
+          <h3>Download PDF</h3>
+          <p>PDF download includes tables summarising key data.</p>
+          <ul>
+            <li><a>This page</a></li>
+            <li><a>All pages in collection</a></li>
+          </ul>
+
+          <h3>Print</h3>
+          <ul>
+            <li><a>This page</a></li>
+            <li><a>All pages in collection</a></li>
+          </ul>
+
+          <p class="margin-top--7">
+            <a href="#top">Back to top</a>
+          </p>
+
         </div>
       </div>
     </div>
