--- a/sprint/11/labour-market/average-weekly-earnings/index.html
+++ b/sprint/11/labour-market/average-weekly-earnings/index.html
@@ -344,9 +344,9 @@ title: "Average weekly earnings"
               <a href="#">labour.market@ons.gov.uk</a><br>+44 (0)1633 455400</p>
           </div>
 
-          <p class="margin-top--7">
-            <a href="#top">Back to top</a>
-          </p>
+          <p class="font-small margin-top--4 margin-bottom--1"><span class="icon icon-download--dark" style="margin-left: 13px"></span><span style="margin-left: -9px;"><a href="#">Download entire collection as PDF</a></span><br>
+          <span class="icon icon-print--dark"></span><span style="margin-left: 5px;"><a href="#">Print entire collection</a></span></p>
+
         </div>
       </div>
     </div>
