--- a/sprint/11/labour-market/employment/index.html
+++ b/sprint/11/labour-market/employment/index.html
@@ -147,7 +147,7 @@ title: "Employment and unemployment"
                 <a href="#contact">Contact us</a>
               </li>
               <li>
-                <a href="#download">Download PDF or print</a>
+                <a href="#download">Download or print</a>
               </li>
             </ul>
 
@@ -1165,19 +1165,19 @@ title: "Employment and unemployment"
               <a href="#">labour.market@ons.gov.uk</a><br>+44 (0)1633 455400</p>
           </div>
 
-          <!-- contact -->
+          <!-- download and print -->
           <h2 id="download" class="margin-top--7">Download PDF or print</h2>
           <h3>Download PDF</h3>
           <p>PDF download includes tables summarising key data.</p>
           <ul>
-            <li><a>This page</a></li>
-            <li><a>All pages in collection</a></li>
+            <li><a>Download this page</a></li>
+            <li><a>Download entire collection</a></li>
           </ul>
 
           <h3>Print</h3>
           <ul>
-            <li><a>This page</a></li>
-            <li><a>All pages in collection</a></li>
+            <li><a>Print this page</a></li>
+            <li><a>Print entire collection</a></li>
           </ul>
 
         </div>
