Fix minor issue with spacing of chart titles

--- a/sprint/10/typography/index.html
+++ b/sprint/10/typography/index.html
@@ -242,7 +242,7 @@ summary: "Important measures of employee earnings, using data from the Annual Su
 
             <!-- Chart -->
             <h4 style="padding-top: 0;">Median full-time weekly earnings increased 3.5% compared with 2017, to £569</h4>
-            <h5 class="chart-subtitle" style="padding-top: 0;">Figure 1: Median full-time gross weekly earnings, UK, April 2006 to 2018</h5>
+            <h5 class="chart-subtitle">Figure 1: Median full-time gross weekly earnings, UK, April 2006 to 2018</h5>
 
             <div id="chart-88a1323f" data-filename="88a1323f" data-uri="/employmentandlabourmarket/peopleinwork/earningsandworkinghours/bulletins/annualsurveyofhoursandearnings/2018/88a1323f" class="markdown-chart" data-highcharts-chart="1" style="width: 230px;">
               <div id="highcharts-bhmiyfh-3" class="highcharts-container " aria-label="Chart representing data available in following XLS or CSV download" style="position: relative; overflow: hidden; width: 700px; height: 392px; text-align: left; line-height: normal; z-index: 0; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); font-family: &quot;Open Sans&quot;, Tahoma, Verdana, Arial;"><svg
