View chart as table

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ primary-nav: false
 secondary-nav: false
 language-switch: false
 footer: false
+title: "Charts alpha prototype"
 ---
 
 <div class="wrapper prototype">
