Bulletin main points using sparklines

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@ title: "Charts alpha prototype"
   <div class="col-wrap">
     <div class="col col--md-two-thirds col--lg-two-thirds">
       <h1>Charts alpha prototypes</h1>
-      <p>Latest version of the prototype: <a href="labour-market/overview">charts alpha prototype</a></p>
+      <p>Latest versions of the prototype:<p/>
+        <ul>
+          <li><a href="labour-market/employment">Chart to table toggle</a</li>
+          <li><a href="labour-market/overview-2">Key statistics in a table and sparklines</a></li>
+          <li><a href="labour-market/overview-3">Key statistics in bullet points</a</li>
+          <li><a href="labour-market/overview-4">Key statistics in bullets points and sparklines</a></li>
+        </ul>
+
 
       <h2>Previously tested versions</h2>
       <table style="width: 100%;">
