update index page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ title: "Find an answer alpha prototype"
     <div class="col col--md-two-thirds col--lg-two-thirds">
       <h1>Find an answer alpha prototypes</h1>
       <p>Latest versions of the prototype:<p/>
+        <a href = "/death-statistics">First prototype, just tables (v0.0.1)</a>
 
       <h2>Previously tested versions</h2>
       <table style="width: 100%;">
@@ -23,8 +24,8 @@ title: "Find an answer alpha prototype"
           <th>Changes</th>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
+          <td>0.0.1</td>
+          <td>06 June 2019 (TBC)</td>
           <td></td>
         </tr>
       </table>
